--- a/ubiquity/localization/pt/general.po
+++ b/ubiquity/localization/pt/general.po
@@ -154,7 +154,7 @@ msgid "Calculates using\n"
 "instead for simple expressions like\n"
 "<code>22/7</code>\n"
 "."
-msgstr "Calculates using\n"
+msgstr "Calcula usando\n"
 "<a href=\"http://www.googleguide.com/help/calculator.html\">Calculadora do Google</a>\n"
 "funciona como uma calculadora cientifica,\n"
 "    conhece constantes como a velocidade da luz,\n"
