i18n: quick update to ja files which should make localization.py pass

--- a/ubiquity/localization/ja/developer.po
+++ b/ubiquity/localization/ja/developer.po
@@ -62,8 +62,7 @@ msgid "run selector-selector"
 msgstr "run selector-selector|selector-selector"
 
 msgctxt "run selector-selector.help"
-msgid ""
-"<dl>\n"
+msgid "<dl>\n"
 "  <dt>\n"
 "    <b>Left-click / Enter</b>\n"
 "  </dt>\n"
@@ -113,8 +112,7 @@ msgstr ""
 "</dl>"
 
 msgctxt "run selector-selector.description"
-msgid ""
-"<ul style=\"list-style-image:none\">\n"
+msgid "<ul style=\"list-style-image:none\">\n"
 "  <li>Lets you type a jQuery selector and highlights matched elements.</li>\n"
 "  <li>Hovering on an element generates a matching selector.</li>\n"
 "</ul>"
