--- a/ubiquity/localization/ja/search.po
+++ b/ubiquity/localization/ja/search.po
@@ -120,8 +120,7 @@ msgid "amazon"
 msgstr "Amazonで検索する|Amazonで検索して|Amazonで検索しろ|アマゾンで検索する|アマゾンで検索して|アマゾンで検索して"
 
 msgctxt "amazon.help"
-msgid ""
-"<dl>\n"
+msgid "<dl>\n"
 "  <dt>Available Indices</dt>\n"
 "  <dd>\n"
 "    <b>All</b>\n"
