--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -30,6 +30,13 @@ ubiquity.prefkeys.meta=META
 ubiquity.prefkeys.pressyourcombo=Press your combination...
 
 ############################
+# confirm-add-js.js
+# chrome://ubiquity/content/confirm-add-command.xhtml
+############################
+ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
+ubiquity.subscription.successheader=Subscription Successful
+
+############################
 # thenext.js
 # chrome://its/location/relevant.xhtml
 ############################
