--- a/ubiquity/chrome/locale/en-US/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.dtd
@@ -9,12 +9,15 @@ So please, bear with us as we'll be adding and changing things in the future. Bu
 we're such nice people we promise to keep you updated. Happy translating!
 -->
 
+<!ENTITY appTitle "Ubiquity">
+
 <!-- Page Titles  -->
 <!ENTITY ubiquity.pagetitle.About "About Ubiquity">
 <!ENTITY ubiquity.pagetitle.Settings "Ubiquity Settings &amp; Skins">
 <!ENTITY ubiquity.pagetitle.YourCommands "Ubiquity Commands">
 <!ENTITY ubiquity.pagetitle.Support "Ubiquity Support">
 <!ENTITY ubiquity.pagetitle.HackUbiquity "Ubiquity Command Editor">
+<!ENTITY ubiquity.pagetitle.ConfirmAddCommand "Ubiquity Command from Untrusted Source">
 
 <!-- Page header taglines -->
 <!ENTITY ubiquity.tagline.About "Don't Surf the Web. Command it.">
