--- a/ubiquity/localization/ca/builtincmds.po
+++ b/ubiquity/localization/ca/builtincmds.po
@@ -44,8 +44,8 @@ msgid "write ubiquity commands|edit ubiquity commands|hack ubiquity"
 msgstr "escriu ordres de l'Ubiquity|edita ordres de l'Ubiquity"
 
 msgctxt "write ubiquity commands.description"
-msgid "Takes you to the Ubiquity <a href=\"chrome://ubiquity/content/editor.html\">command editor</a> page."
-msgstr "Us porta a la pàgina <a href=\"chrome://ubiquity/content/editor.html"\">d'edició d'ordres</a> de l'Ubiquity."
+msgid "Takes you to the Ubiquity <a href=\"chrome://ubiquity/content/editor.xhtml\">command editor</a> page."
+msgstr "Us porta a la pàgina <a href=\"chrome://ubiquity/content/editor.xhtml"\">d'edició d'ordres</a> de l'Ubiquity."
 
 #. list ubiquity commands command:
 #. use | to separate multiple name values:
@@ -54,9 +54,9 @@ msgid "list ubiquity commands"
 msgstr "llista les ordres de l'Ubiquity"
 
 msgctxt "list ubiquity commands.description"
-msgid "Opens <a href=\"chrome://ubiquity/content/cmdlist.html\">the list</a>\n"
+msgid "Opens <a href=\"chrome://ubiquity/content/cmdlist.xhtml\">the list</a>\n"
 "      of all Ubiquity commands available and what they all do."
-msgstr "Obre <a href=\"chrome://ubiquity/content/cmdlist.html\">la llista</a>\n"
+msgstr "Obre <a href=\"chrome://ubiquity/content/cmdlist.xhtml\">la llista</a>\n"
 "      de totes les ordres de l'Ubiquity disponibles i què fan."
 
 #. change ubiquity settings command:
@@ -67,9 +67,9 @@ msgstr "canvia els paràmetres de l'Ubiquity|canvia la configuració de l'Ubiqui
 "canvia l'aparença de l'Ubiquity"
 
 msgctxt "change ubiquity settings.description"
-msgid "Takes you to the <a href=\"chrome://ubiquity/content/settings.html\">settings</a> page,\n"
+msgid "Takes you to the <a href=\"chrome://ubiquity/content/settings.xhtml\">settings</a> page,\n"
 "      where you can change your skin, key combinations, etc."
-msgstr "Us porta a la pàgina de <a href=\"chrome://ubiquity/content/settings.html\">configuració</a> de l'Ubiquity,\n"
+msgstr "Us porta a la pàgina de <a href=\"chrome://ubiquity/content/settings.xhtml\">configuració</a> de l'Ubiquity,\n"
 "      on podeu canviar-ne l'aparença, les combinacions de tecles, etc."
 
 #. get support command:
@@ -79,9 +79,9 @@ msgid "get support"
 msgstr "demana ajuda"
 
 msgctxt "get support.description"
-msgid "Takes you to the <a href=\"chrome://ubiquity/content/support.html\">support</a> page,\n"
+msgid "Takes you to the <a href=\"chrome://ubiquity/content/support.xhtml\">support</a> page,\n"
 "    where you can report bugs, get troubleshooting help, etc."
-msgstr "Us porta a la pàgina <a href=\"chrome://ubiquity/content/support.html\">d'assistència</a>,\n"
+msgstr "Us porta a la pàgina <a href=\"chrome://ubiquity/content/support.xhtml\">d'assistència</a>,\n"
 "    on podeu informar d'errors, aconseguir ajuda en la resolució de "
 "problemes, etc."
 
