--- a/ubiquity/localization/da/builtincmds.po
+++ b/ubiquity/localization/da/builtincmds.po
@@ -42,8 +42,8 @@ msgid "write ubiquity commands|edit ubiquity commands|hack ubiquity"
 msgstr "skriv ubiquity kommandoer|rediger ubiquity kommandoer|hack ubiquity"
 
 msgctxt "write ubiquity commands.description"
-msgid "Takes you to the Ubiquity <a href=\"chrome://ubiquity/content/editor.html\">command editor</a> page."
-msgstr "Fører dig til Ubiquitys <a href=\"chrome://ubiquity/content/editor.html\">kommando editor</a> side."
+msgid "Takes you to the Ubiquity <a href=\"chrome://ubiquity/content/editor.xhtml\">command editor</a> page."
+msgstr "Fører dig til Ubiquitys <a href=\"chrome://ubiquity/content/editor.xhtml\">kommando editor</a> side."
 
 
 #. list ubiquity commands command:
@@ -53,9 +53,9 @@ msgid "list ubiquity commands"
 msgstr "list ubiquity kommandoer"
 
 msgctxt "list ubiquity commands.description"
-msgid "Opens <a href=\"chrome://ubiquity/content/cmdlist.html\">the list</a>\n"
+msgid "Opens <a href=\"chrome://ubiquity/content/cmdlist.xhtml\">the list</a>\n"
 "      of all Ubiquity commands available and what they all do."
-msgstr "Åbner <a href=\"chrome://ubiquity/content/cmdlist.html\">listen</a>\n"
+msgstr "Åbner <a href=\"chrome://ubiquity/content/cmdlist.xhtml\">listen</a>\n"
 "      over alle tilgængelige Ubiquity-kommandoer, og hvad de gør."
 
 
@@ -66,9 +66,9 @@ msgid "change ubiquity settings|change ubiquity preferences|change ubiquity skin
 msgstr "skift ubiquity indstillinger|skift ubiquity tema"
 
 msgctxt "change ubiquity settings.description"
-msgid "Takes you to the <a href=\"chrome://ubiquity/content/settings.html\">settings</a> page,\n"
+msgid "Takes you to the <a href=\"chrome://ubiquity/content/settings.xhtml\">settings</a> page,\n"
 "      where you can change your skin, key combinations, etc."
-msgstr "Fører dig til <a href=\"chrome://ubiquity/content/settings.html\">indstillinger</a> siden, \n"
+msgstr "Fører dig til <a href=\"chrome://ubiquity/content/settings.xhtml\">indstillinger</a> siden, \n"
 "      hvor du kan ændre dit tema osv."
 
 
@@ -79,9 +79,9 @@ msgid "get support"
 msgstr "få hjælp"
 
 msgctxt "get support.description"
-msgid "Takes you to the <a href=\"chrome://ubiquity/content/support.html\">support</a> page,\n"
+msgid "Takes you to the <a href=\"chrome://ubiquity/content/support.xhtml\">support</a> page,\n"
 "    where you can report bugs, get troubleshooting help, etc."
-msgstr "Fører dig til <a href=\"chrome://ubiquity/content/support.html\">hjælp</a> siden,\n"
+msgstr "Fører dig til <a href=\"chrome://ubiquity/content/support.xhtml\">hjælp</a> siden,\n"
 "    hvor du kan raportere fejl, få hjælp til problemfinding, etc."
 
 
