ui/i18n: accepting lech's patch for UI xhtml changes. A few bugs were found but communicated with lech.

--- a/ubiquity/chrome/locale/en-US/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/en-US/aboutubiquity.properties
@@ -20,7 +20,8 @@ ubiquity.prefkeys.clickhere=Click here to change
 # After a change occurs this is the confirmation along with modifier names
 ubiquity.prefkeys.confirmchange=Your key has been changed to
 
-# These are not attached, see prefkeys.js for details.
+# These are not yet attached, see prefkeys.js for details.
+# Binding and feedback does not work when applied.
 ubiquity.prefkeys.alt=ALT
 ubiquity.prefkeys.ctrl=CTRL
 ubiquity.prefkeys.shift=SHIFT
@@ -37,6 +38,19 @@ ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
 ubiquity.subscription.successheader=Subscription Successful
 
 ############################
+# localization-template.js
+# chrome://ubiquity/content/localization-template.xhtml
+#
+# cmdlist.js
+# chrome://ubiquity/content/cmdlist.xhtml
+#
+# the "show/hide help" messages.
+############################
+
+ubiquity.showhidehelp.show=Show Help
+ubiquity.showhidehelp.hide=Hide Help
+
+############################
 # thenext.js
-# chrome://its/location/relevant.xhtml
+# chrome://ubiquity/content/relevant.xhtml
 ############################
